# ifc23dtiles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bimtask.json
BimModelInput/: BimModelInput.cpp  BimModelInput.h  BimModelInput.vcxproj  BimModelInput.vcxproj.filters  CMakeLists.txt  ClassDiagram.cd  ProgressHelper.cpp  ReadMe.txt  config.h  dllmain.cpp  stdafx.cpp  stdafx.h  tga2png.cpp  util.cpp  util.h  uuid4.cpp  uuid4.h
PluginIfcpplast/: CMakeLists.txt  LabGeometryConverter.h  LabRepresentationConverter.h  LabStylesConverter.h  PluginIfcpplast.cpp  PluginIfcpplast.h  PluginIfcpplast.vcxproj  PluginIfcpplast.vcxproj.filters  cpp.hint  dllmain.cpp  framework.h  ifcpp_sub_classes.h  md5.cpp  md5.h  pch.cpp  pch.h
TilesStorage/: CMakeLists.txt  GZipCodec.cpp  GZipCodec.h  TilesStorage.cpp  TilesStorage.h  TilesStorage.vcxproj  TilesStorage.vcxproj.filters  TilesStorageFile.cpp  TilesStorageFile.h  TilesStorageMongodb.cpp  TilesStorageMongodb.h  TilesStorageSqlite.cpp  TilesStorageSqlite.h
bim23dtiles/: B3dm.cpp  B3dm.h  BintreeSplitor.cpp  BintreeSplitor.h  CMakeLists.txt  Cesium.cpp  Cesium.h  ClassDiagram.cd  LabConverterOSG.h  LabGeometryConverter.h  LabRepresentationConverter.h  ModelInput.cpp  ModelInput.h  ModelInputGdal.cpp  OsgUtil.cpp  OsgUtil.h  PostProcess.cpp  PostProcess.h  ReadMe.txt  Register.cpp  Register.h  Scene2Gltf.cpp  Scene2Gltf.h  Scene2GltfV2.cpp  SceneOutput.cpp  SceneOutput.h  SceneOutputConfig.cpp  SceneOutputConfig.h  SubScene.cpp  SubScene.h  SubScenePacker.cpp  SubScenePacker.h  TexturePacker.cpp  TexturePacker.h  VcgUtil.cpp  VcgUtil.h  bim23dtiles.cpp  bim23dtiles.sln  binpack.hpp  custom_json.cpp  (+20 more)
bim23dtiles/exp/: IFC4X1.exp  IFC4_ADD2.exp
